@@ -86,6 +86,9 @@ Release 2.0.1-alpha - UNRELEASED
 
     HADOOP-8687. Upgrade log4j to 1.2.17. (eli)
 
+    HADOOP-8278. Make sure components declare correct set of dependencies.
+    (tomwhite)
+
   BUG FIXES
 
     HADOOP-8372. NetUtils.normalizeHostName() incorrectly handles hostname
